ui/style/table.css
.table {
  border-collapse: collapse;
  white-space: nowrap;
  padding: 0;
  margin: 0;
  margin-bottom: 1em;
  border-color: var(--table-border-color);
}

.table-row:nth-child(even) {
  background-color: var(--table-row-bg-color);
}

.table-header {
  position: sticky;
  top: 0;
  bottom: 1em;
  /* border: none; */
  /* border-width: 0; */
  background-color: var(--table-head-bg-color);
  box-shadow: 1px 1px 0 var(--table-border-color);
  /* outline: 1px solid var(--table-border-color); */
  z-index: 1;
}

.table-corner {
  text-align: right;
}

/* make firefox inherit border-color for cells */
.table * {
  border-color: inherit;
}

.table th {
  box-shadow: 2px 2px 0 -1px var(--table-border-color) inset;
}

.table-cell,
.table-rowheader {
  border-width: 1px;
  border-style: solid;
  padding: .2em;
}

.table-cell {
  /* truncate long cells */
  max-width: 50em;
  overflow: hidden;
  text-overflow: ellipsis;
}

.table-cell--num {
  text-align: right;
}

/* .table-cell--updated {
  position: relative;
  padding-right: 1em;
}

.table-cell--updated.table-cell--num {
  padding-right: .2em;
  padding-left: 1em;
}

.table-cell--updated::after {
  font-family: 'fontello';
  font-style: normal;
  font-weight: normal;
  speak: none;
  text-decoration: none;
  width: 1em;
  text-align: center;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  content: '\e816';
  position: absolute;
  right: 2px;
  color: rgb(145, 205, 152);
  top: 4px;
}

.table-cell--updated.table-cell--num::after {
  right: initial;
  left: 2px;
} */

.table-row--highlighted .table-cell {
  /* expand cell content on focus */
  white-space: pre;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

/* .table-colheader is all TH except row number */
.table-colheader {
  width: 6em;
}

/*  ┬─────────┬─
 *  │ COLNAME │
 *  │ coltype │
 *  ┼─────────┼─
 *  │     │
 */
.table-coltype {
  display: block;
  opacity: .5; /* mute color */
  font-size: .5em;
  text-transform: uppercase;
}

/* row number */
.table-corner::before {
  content: '#';
}
.table-rowheader {
  text-align: right;
}

.table-counter {
  color: #ccc;
  font-size: .6em;
  margin-right: .5em;
}

.table-newrow > .table-rowheader::before {
  content: '*';
}

/* empty TD are nulls */
.table-cell:empty::before {
  content: 'null';
  font-style: italic;
  font-size: smaller;
  color: var(--fg-mute);
}

.table-cell--emptystr:empty::before {
  content: 'empty string';
}

/* make blank row semiopaque like a ghost */
.table-has-blankrow > tbody > tr:last-child {
  opacity: .5;
}

.table-delete_row {
  border: none;
  padding: 0;
  margin: 0;
  background: transparent;
  cursor: pointer;
  font-size: 100%;
}

.table-delete_row::before {
  font-family: 'fontello';
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: none;
  width: 1em;
  text-align: center;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  content: '\e811';
}

.table-delete_row:focus {
  outline: none;
}

.table-delete_row--on::before {
  color: var(--danger-color);
}

.table-delete_row--off:hover::before {
  color: #555;
}

.table-delete_row--off::before {
  color: #aaa;
}

.table-insert_cancel {
  border: none;
  padding: 0;
  margin: 0;
  background: transparent;
  cursor: pointer;
  font-size: 100%;
  color: #aaa;
}

.table-insert_cancel:focus {
  outline: none;
}

.table-insert_cancel:hover {
  color: var(--danger-color);
}

.table-insert_cancel::before {
  content: '\e811';
  font-family: 'fontello';
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: none;
  width: 1em;
  text-align: center;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
}

.table-update_cancel {
  border: none;
  padding: 0;
  margin: 0;
  background: transparent;
  cursor: pointer;
  font-size: 100%;
  color: #aaa;
  margin-left: .2em;
}

.table-update_cancel:focus {
  outline: none;
}

.table-update_cancel:hover {
  color: var(--danger-color);
}

.table-update_cancel::before {
  content: '\e812';
  font-family: 'fontello';
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: none;
  width: 1em;
  text-align: center;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
}

.table-error_icon::before {
  content: '\e804';
  font-family: 'fontello';
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: none;
  width: 1em;
  text-align: center;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  color: var(--danger-color);
}

.table-error_icon:hover::after {
    content: attr(data-tooltip);
    position: absolute;
    background-color: #555;
    font-style: normal;
    font-weight: normal;
    color: #ddd;
    line-height: 1.4;
    padding: 0 .5em;
    border-radius: 3px;
    box-shadow: 0 0 0.3em black;
    margin-top: 1.5em;
    margin-right: 1em;
    white-space: normal;
    text-align: left;
}

.table-row--deleted {
  color: #aaa;
  text-decoration: line-through;
}

.table-row--highlighted {
  background: #1d75b3 !important;
  color: #eee;
}

